.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v3/missedPipeableOpportunity_error.pipings.txt
==== /.src/missedPipeableOpportunity_error.ts (8 flows) ====

=== Piping Flow ===
Location: 5:17 - 8:3
Node: Schema.Struct({\n  x: Schema.Finite,\n  y: Schema.Finite\n})
Node Kind: KindCallExpression

Subject: {\n  x: Schema.Finite,\n  y: Schema.Finite\n}
Subject Type: { x: typeof Finite; y: typeof Finite; }

Transformations (1):
  [0] kind: call
      callee: Schema.Struct
      args: (constant)
      outType: Struct<{ x: typeof Finite; y: typeof Finite; }>

=== Piping Flow ===
Location: 10:32 - 10:91
Node: identity(Schema.decodeUnknown(MyStruct)({ x: 42, y: 42 }))
Node Kind: KindCallExpression

Subject: { x: 42, y: 42 }
Subject Type: { x: number; y: number; }

Transformations (2):
  [0] kind: call
      callee: Schema.decodeUnknown(MyStruct)
      args: (constant)
      outType: Effect<{ readonly x: number; readonly y: number; }, ParseError, never>
  [1] kind: call
      callee: identity
      args: (constant)
      outType: Effect<{ readonly x: number; readonly y: number; }, ParseError, never>

=== Piping Flow ===
Location: 12:40 - 12:109
Node: identity(identity(Schema.decodeUnknown(MyStruct)({ x: 42, y: 42 })))
Node Kind: KindCallExpression

Subject: { x: 42, y: 42 }
Subject Type: { x: number; y: number; }

Transformations (3):
  [0] kind: call
      callee: Schema.decodeUnknown(MyStruct)
      args: (constant)
      outType: Effect<{ readonly x: number; readonly y: number; }, ParseError, never>
  [1] kind: call
      callee: identity
      args: (constant)
      outType: Effect<{ readonly x: number; readonly y: number; }, ParseError, never>
  [2] kind: call
      callee: identity
      args: (constant)
      outType: Effect<{ readonly x: number; readonly y: number; }, ParseError, never>

=== Piping Flow ===
Location: 14:48 - 17:2
Node: pipe(\n  Schedule.exponential(Duration.millis(10), 4),\n  Schedule.whileOutput(Duration.lessThanOrEqualTo(Duration.seconds(10))) // should not report\n)
Node Kind: KindCallExpression

Subject: Schedule.exponential(Duration.millis(10), 4)
Subject Type: Schedule<Duration, unknown, never>

Transformations (1):
  [0] kind: pipe
      callee: Schedule.whileOutput
      args: [Duration.lessThanOrEqualTo(Duration.seconds(10))]
      outType: Schedule<DurationInput, unknown, never>

=== Piping Flow ===
Location: 15:24 - 15:43
Node: Duration.millis(10)
Node Kind: KindCallExpression

Subject: 10
Subject Type: 10

Transformations (1):
  [0] kind: call
      callee: Duration.millis
      args: (constant)
      outType: Duration

=== Piping Flow ===
Location: 16:24 - 16:72
Node: Duration.lessThanOrEqualTo(Duration.seconds(10))
Node Kind: KindCallExpression

Subject: 10
Subject Type: 10

Transformations (2):
  [0] kind: call
      callee: Duration.seconds
      args: (constant)
      outType: Duration
  [1] kind: call
      callee: Duration.lessThanOrEqualTo
      args: (constant)
      outType: (self: DurationInput) => boolean

=== Piping Flow ===
Location: 19:41 - 21:2
Node: Effect.log("Hello").pipe(\n  Effect.ensuring(Effect.log("World"))\n)
Node Kind: KindCallExpression

Subject: "Hello"
Subject Type: "Hello"

Transformations (2):
  [0] kind: call
      callee: Effect.log
      args: (constant)
      outType: Effect<void, never, never>
  [1] kind: pipeable
      callee: Effect.ensuring
      args: [Effect.log("World")]
      outType: Effect<void, never, never>

=== Piping Flow ===
Location: 20:19 - 20:38
Node: Effect.log("World")
Node Kind: KindCallExpression

Subject: "World"
Subject Type: "World"

Transformations (1):
  [0] kind: call
      callee: Effect.log
      args: (constant)
      outType: Effect<void, never, never>
